funciona registro to tbm con sockets io

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -5,6 +5,9 @@
   var mydata;
 
   $(document).ready(function() {
+
+
+
     cargar_pantalla_guardada();
     $("#TBM_icon").css('visibility', 'hidden');
     display_remote_conection_to_TBM();
@@ -19,7 +22,7 @@
         console.log("receiving:"+a1);
         $('#display').html(msg[1]);
         mydata=msg[0];
-        console.log("esto viene de enlace a:"+mydata);
+        console.log("esto viene de enlace a:"+JSON.stringify(mydata));
       });
       return;
     }
@@ -93,7 +96,7 @@
     mandar_orden("cancelar_remesa");
     // mandar_orden("trigger_socket");
     //
-     mandar_orden("fer");
+     mandar_orden("socket_to_tbm");
      mandar_orden("iniciar_nueva_remesa");
      mandar_orden("finish");
 
@@ -179,9 +182,10 @@
       return result;
     }
     function cargar_pantalla_guardada() {
-      //  socket.emit("main");
-          $('#display').load("./system/buffer.html", {machine_name:"teast"});
+        socket.emit("main");
+        //  $('#display').load("./system/buffer.html");
           //,{machine_name:"PRO_0103"});
+
     }
     //////////////////////////////////////////
     function display_message(mes_to_display) {
