--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -14,8 +14,10 @@
   <link href="css/fontawesome/css/all.css" rel="stylesheet" type="text/css">
 
   <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script> -->
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/utils/Draggable.min.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular.js"></script>
+
+  <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/utils/Draggable.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular.js"></script> -->
+
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular.min.js"></script> -->
   <script src="js/angular-tweebmax-draggable-knob.js"></script>
 
