--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -92,6 +92,7 @@
     mandar_orden_sin_link("unlock_cashbox");
     mandar_orden("smart_empty");
     mandar_orden_sin_link("Smart_emptying");
+    mandar_orden_sin_link("read_new_tebs");
   //  reflejar_orden("Smart_emptied");
   //  mandar_orden("Cashbox_Back_in_Service");
     mandar_orden("cancelar_remesa");
