copia de seguridad

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -41,7 +41,7 @@
         //  console.log("esto viene de enlace a:"+JSON.stringify(mydata));
         //  console.log("Nombre:"+ mydata.nombre);
 
-      //  display_message(msg);
+       // display_message(msg);
       //      socket.emit(a2,msg);
       //  console.log(msg);
       });
@@ -131,6 +131,13 @@
 
     });
 /////////////////////////////////////////////////////////////////////
+// socket.on('Cashbox_out_of_Service', function(msg) {
+//   //display_system_running_indicator();
+//   //online = true;
+//   console.log(msg);
+// });
+
+
     // remote_TBM.on('machine', function(data) {
     //   console.log("ticking...");
     // });
