--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -29,12 +29,21 @@
     var socket = io();
     var is_cashbox_in_service = true;
       var once = true;
+      var indicador_unico=false;
+      var caja_devuelta=false;
     // var socketConnection = io.connect();
     // socketConnection.on('connect', function() {
     //   const sessionID = socketConnection.socket.sessionid; //
     // console.log(sessionID);
     // });
     $(document).ready(function() {
+      function send_once(orden){
+
+        if (indicador_unico==false) {
+          socket.emit(orden);
+          indicador_unico=true;
+        }
+      }
 
       console.log("cargando homesite 2020");
       // socket.on('iniciando', function(msg) {
@@ -53,31 +62,64 @@
         //console.log("mi_id:"+ socket.id); // an alphanumeric id...
     //  });
     socket.on('Cashbox_out_of_Service', function(msg) {
-      is_cashbox_in_service = false;
-      if (once) {
-        //$('#out_of_service, #overlay-back').fadeIn(500);
-        $('#out_of_service, .overlay-back').fadeIn(500);
+      console.log(msg);
+        //socket.emit();
+        send_once("unlock_cashbox");
+//      if (msg="Cashbox_Unlocked") {
+         //$('#Cashbox_Unlocked, .overlay-back').fadeIn(500);
+         //$('#out_of_service').fadeOut(500);
+         $('#out_of_service, .overlay-back').fadeIn(500);
+        // $('#Cashbox_Unlocked').fadeOut(500);
+        document.getElementById('msg11').innerHTML=msg;
+        if (msg=="Unable_to_read_Barcode") {
+          document.getElementById('msg11').innerHTML="No se detecta bolsa, Será necesario que ingrese una bolsa nueva, verifique que el codigo de barras se encuentre en buen estado.<br> Utilizando la llave desbloquee el pestillo iluminado en color verde";
+            caja_devuelta=false;
+        }
+        if (msg=="Cashbox_Unlocked") {
+          if (caja_devuelta==false) {
+            document.getElementById('msg11').innerHTML="Retire el cajón del dinero e introduzca una bolsa nueva";
 
-        once = false;
-      }
+          }else {
+            document.getElementById('msg11').innerHTML="vuelva a bloquear el pestillo utilizando la llave.";
+          }
+
+        }
+        if (msg=="Cashbox_Removed") {
+          caja_devuelta=true;
+          document.getElementById('msg11').innerHTML="Detecto que ya saco el cajon de dinero, coloque la nueva bolsa adecuadamente, confirmando que el codigo de barras quede en la posicion correcta.(verificar el sticker en la parte superior del cajon del dinero para mas detalles de como colocar la bolsa)";
+        }
+
+        if (msg=="Cashbox_out_of_position") {
+        //  caja_devuelta=true;
+          document.getElementById('msg11').innerHTML="Tire de la manija suavemente pero con firmeza, hasta retirar el cajon del dinero.";
+        }
+
+  //    }
+      // is_cashbox_in_service = false;
+      // if (once) {
+      //   //$('#out_of_service, #overlay-back').fadeIn(500);
+      //   $('#out_of_service, .overlay-back').fadeIn(500);
+      //
+      //   once = false;
+      // }
       //  $('#overlay, #overlay-back').fadeIn(500);
 
       //  display_message(msg);
     });
-    socket.on('Cashbox_Replaced', function(msg) {
-      is_cashbox_in_service = true;
-      $('#out_of_service').fadeOut(500);
-      $('#overlay').fadeIn(500);
-      once = true;
-      muestra_consulta();
-      //  display_message(msg);
-    });
+    // socket.on('Cashbox_Replaced', function(msg) {
+    //   is_cashbox_in_service = true;
+    //   $('#out_of_service').fadeOut(500);
+    //   $('#overlay').fadeIn(500);
+    //   once = true;
+    //   muestra_consulta();
+    //   //  display_message(msg);
+    // });
     socket.on('Cashbox_Back_in_Service', function(msg) {
-      is_cashbox_in_service = true;
+    //  is_cashbox_in_service = true;
       $('#out_of_service').fadeOut(500);
       $('#overlay').fadeOut(500);
-      once = true;
-      socket.emit("read_new_tebs");
+  //    once = true;
+  //    socket.emit("read_new_tebs");
       //  muestra_consulta();
       //  display_message(msg);
     });
@@ -123,19 +165,19 @@
   <div id="out_of_service">
     <div class="grupo3">
       <div></div>
-      <div id="titulo_popup" style="color:red;">No se detecta la bolsa de dinero</div>
+      <div id="titulo_popup" style="color:red;">La maquina esta fuera de servicio</div>
       <div></div>
       <div></div>
-      <div>Retire el cajon de dinero y verifique que la bolsa se encuentra correctamente colocada.</div>
       <div></div>
       <div></div>
-      <div id="msg1" style="color:green;"></div>
+      <div></div>
+      <div id="msg11" style="color:green;"></div>
       <div></div>
       <!-- <div><a class="btn" style="width:120px;" id="opc11">Si</a></div>
       <div><a class="btn" style="width:120px;" id="testy1">No</a></div> -->
-      <div class="btn volver" id='unlock_cashbox'><i class="fas fa-lock-open fa-3x"></i></div>
+      <!-- <div class="btn volver" id='unlock_cashbox'><i class="fas fa-lock-open fa-3x"></i></div> -->
       <div></div>
-      <div class="btn volver" id='lock_cashbox'><i class="fas fa-lock fa-3x"></i></div>
+      <!-- <div class="btn volver" id='lock_cashbox'><i class="fas fa-lock fa-3x"></i></div> -->
     </div>
   </div>
 
